--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ charset-normalizer==3.4.0
 click==8.1.7
 exceptiongroup==1.2.2
 fastapi==0.115.5
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
+packaging==24.2
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
